--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
@@ -31,8 +33,8 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
     "nodemon": "^3.1.7",
+    "prettier": "^2.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
