--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,13 +3,16 @@
     "next/core-web-vitals",
     "plugin:prettier/recommended",
     "plugin:storybook/recommended",
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "plugins": ["@typescript-eslint"],
   "rules": {
-		"@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-		"@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_" }
+    ],
+    "@typescript-eslint/no-explicit-any": "off",
     "prettier/prettier": [
       "error",
       {
